<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ireddragonicy.hsrgraphicdroid.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/graphicsFragment"
        android:name="com.ireddragonicy.hsrgraphicdroid.ui.fragments.GraphicsFragment"
        android:label="@string/nav_graphics"
        tools:layout="@layout/fragment_graphics" />

    <fragment
        android:id="@+id/gamePrefsFragment"
        android:name="com.ireddragonicy.hsrgraphicdroid.ui.fragments.GamePrefsFragment"
        android:label="@string/nav_game_prefs"
        tools:layout="@layout/fragment_game_prefs" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ireddragonicy.hsrgraphicdroid.ui.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>

